--- a/db-api/src/main/resources/application.properties
+++ b/db-api/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=db-api
+spring.datasource.url=jdbc:mysql://localhost:3306/zepto-clone
+spring.datasource.username=root
+spring.datasource.password=Mushfique@037
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
