--- a/mail-api/src/main/resources/application.properties
+++ b/mail-api/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=mail-api
+server.port=8082
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mushfique1213@gmail.com
+spring.mail.password=ahhqllidnulzejlc
+spring.mail.properties.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
