--- a/central-api/src/main/resources/application.properties
+++ b/central-api/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=central-api
 server.port=8081
 db.api.url=http://localhost:8080/api/v1/db
-db.mail.url=http://localhost:8082/api/v1/mail
+mail.api.url=http://localhost:8082/api/v1/mail
