--- a/central-api/src/main/resources/application.properties
+++ b/central-api/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=central-api
 server.port=8081
 db.api.url=http://localhost:8080/api/v1/db
 mail.api.url=http://localhost:8082/api/v1/mail
+jwt.secret=bxwbvxjevcjevcvwejvsay7frw7vsqvdsy2sv2bdmnxni2hdi3h
